# gravit

./: .gitignore  AudioStreamer.h  AudioStreamer.m  COPYING  ChangeLog  Makefile  Makefile.MinGW  Makefile.am  Makefile.console  Makefile.full  Makefile.gui  Makefile.linux  Makefile.old  Makefile.osx  README  autogen.sh  color.c  command.c  command.h  config.c  configure.ac  configure.in  console.c  demo.cfg  fixCRLF.sh  font.c  font.h  fps.c  frame-ot.c  frame-pp.c  frame-pp_sse.c  frame-pp_vector.c  frame.c  gfx.c  gravit.cfg  gravit.dsp  gravit.dsw  gravit.h  gravit.rc  gravit.sln  (+22 more)
Debug/: graviton.bsc  graviton.ilk  vc60.idb
MinGW/: Makefile
Release/: color.sbr  command.sbr  console.sbr  font.sbr  frame-ot.sbr  frame-pp.sbr  frame.sbr  gfx.sbr  input.sbr  main.sbr  osd.sbr  spawn.sbr  tool.sbr  vc60.idb
VisualStudio/Gravit/: Gravit-no-agar.sln  Gravit.sln
VisualStudio/Gravit/Gravit/: Gravit-no-agar.vcxproj  Gravit.vcxproj  Gravit.vcxproj.filters
Xcode/Gravit/: Gravit-Info.plist  GravitAppDelegate.h  GravitAppDelegate.m  Gravit_Prefix.pch  SDLMain.m  create-installer.sh  gravit.icns  main.m
Xcode/Gravit/English.lproj/: MainMenu.xib
Xcode/Gravit/Gravit.xcodeproj/: project.pbxproj
Xcode/Image/: bg.psd
acinclude/: ax_ext_sse.m4
cfg/: demo.cfg  gravit.cfg  screensaver.cfg
data/: commandhelp.txt
data/skybox/: README.txt
data/skybox/purplenebula/: README.txt  WTFPL.txt
scripts/: binary-galaxy.lua  default.lua  dust.gravitspawn  functions.lua  loops.lua  many-galaxy.lua  one-galaxy.lua  snake.lua
spawn/: binary-galaxy.gravitspawn  cloud.gravitspawn  clouds.gravitspawn  constants.lua  default.gravitspawn  dust.gravitspawn  functions.lua  loops.gravitspawn  many-galaxy.gravitspawn  merging-galaxies.gravitspawn  negative-collision.gravitspawn  negative-sphere.gravitspawn  negative-spiral.gravitspawn  negative-surround.gravitspawn  one-galaxy.gravitspawn  physics.lua  plummer.gravitspawn  snake.gravitspawn  surround.gravitspawn
src/: color.c  command.c  command.h  config.c  config.h  console.c  font.c  font.h  fps.c  frame-ot.c  frame-pp.c  frame-pp_sse.c  frame-pp_vector.c  frame.c  gfx.c  gravit.h  gravit.rc  input.c  lua.c  main.c  osd.c  png_save.c  sdlk.h  spawn.c  sse_functions.h  texture.c  timer.c  tool.c
trac/: WikiFormatter.py  custom-cell.diff
trac/wikimacros/: GravitHelp.py
wikiexport/: exportDoc.py  header.html  wiki2html.py
windows/: Makefile  README-lua.txt  README-zlib.txt  README.txt  gravit.dsp  gravit.vcproj  gravit_omp.sln  gravit_omp.vcproj
windows/lib32/: lua5.1.exp  lua5.1.lib
windows/lib64/: lua5.1.exp  lua5.1.lib
windows/mingw_include32/SDL/: SDL_config.h  SDL_endian.h
windows/mingw_include64/SDL/: SDL_config.h  SDL_net.h  SDL_opengl.h
windows/mingw_include64/freetype/config/: ftoption.h  ftoption.h~
windows/mingw_lib32/: dll_to_def.sh  freetype-config  freetype.def
windows/mingw_lib64/: freetype-config  freetype.def  libSDL_image.la  libSDL_ttf.la  libpng.lib  sdl-config
windows/vc9_include/SDL/: SDL_config.h
windows/vc9_lib32/: SDL.def  SDL_image.def  SDL_ttf.def  freetype.lib  libfreetype-6.def  libpng.lib  libpng12-0.def  libpng14.exp  zlib.lib  zlib1.exp
windowsinstaller/: gravit-inno.iss
www/: convert.php  gravit.css  index.php  updateAllScreenies.sh  updateDist.sh  updateDoc.sh  updateIndex.sh  updateMoofie.sh  updateScreenie.sh
www/docs/: Console.html  Console.php  Index.php  StereoMode.php  doc.css
